# TerriblyBadDistricts

./: .gitpod.Dockerfile  .gitpod.yml  README.md  app.py  census.py  connectToCensusAPI.py  dataProcessor.py  dem_backup.py  dem_gen.py  dissolved_output.dbf  dissolved_output.shx  environment.yml  i_dont_wanna_work_on_this_anymore.py  pyproject.toml  requirements.txt
MarylandBoundarySHP/: BNDY_StateBoundary_DoIT.dbf  BNDY_StateBoundary_DoIT.shp  BNDY_StateBoundary_DoIT.shx
static/: app.js  custom.css
temp/: bigDemDistrict.dbf  bigDemDistrict.shp  bigDemDistrict.shx  combinedDistricts.dbf  combinedDistricts2.dbf  combinedDistricts2.shx  combinedDistricts2_favparty0.dbf  combinedDistricts2_favparty0.shx  combinedDistricts2_favparty1.dbf  combinedDistricts2_favparty1.shx  dissolved_output.dbf  dissolved_output.shx  filledframe.dbf  filledframe.shp  filledframe.shx
templates/: base_map.html  index.html  layout.html
