[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Cam Long <camlong98@gmail.com>"]
description = ""
name = "terriblybaddistricts"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^1.1"
python = "^3.7"
[tool.poetry.dev-dependencies]
